	  current values in the authorities.csv and resourcetypes.csv, respectively):
	       http://mmisw.org/ont/mmi/20090317T183911/authority
	       http://mmisw.org/ont/mmi/20090317T173755/resourcetype
	  A next step is to use these ontologies (instead of the CSV files) to drive the 
	  corresponding drop-down menus.
	  
	  
	- Fixed the ``,,'' issue in voc2rdf: issue #87	
	
2009-03-13
	- Fixed http://code.google.com/p/mmisw/issues/detail?id=98:
	                "new version allows the shortName and authority to be changed"
	                
		- See OntMdServiceImpl._checkUriKeyCombinationForNewVersion
		  Now, OntMd doesn't allow the shortName (resource type) or the organization
		  abbreviation to be changed when a *new version* submission is attempted.
		  
		  
	- Implemented http://code.google.com/p/mmisw/issues/detail?id=87:
					"Ability to have Voc2RDF handle quoted strings for table preview"
		- See VocabPanel.parseLine(), which is used now in updateTabularView().
		   Note: it only handles the double quote (") case.
		- This is Voc2RDF 2.0.0.beta5
		
	                
2009-03-12
	- Fixed http://code.google.com/p/mmisw/issues/detail?id=63:
	                Matching auth+topic not detected as potential update
		- Added ontologyId attribute to the OntologyInfo class, such that the "review"
		  operation has access to it, and thus proceed with the appropriate check in
		  case ontologyId == null (meaning the review is for a *new* submission, not a
		  new version).
		  See OntMdServiceImpl._checkNoPreexistingOntology
		- Note, the _checkNoPreexistingOntology check is repeated in the "upload" operation
		  in case there is a new registration done by other user in the meantime (from when the
		  "review" was done). Of course, we are NOT completely solving the potential concurrency 
		  problem with this re-check; we are just reducing the chances of that event.

2009-03-11
	- Added sample.build.properties to be used as a template for the actual build.properties