@@ -1,89 +1,0 @@
-<?xml version="1.0"?>
-<rdf:RDF
-    xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-    xmlns:xsd="http://www.w3.org/2001/XMLSchema#"
-    xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
-    xmlns:owl="http://www.w3.org/2002/07/owl#"
-    xmlns:dc="http://purl.org/dc/elements/1.1/"
-    xmlns:omv="http://omv.ontoware.org/2005/05/ontology#"
-    xmlns:omvmmi="http://mmisw.org/ont/mmi/20081020/ontologyMetadata/">
-  <rdf:Description rdf:about="http://mmisw.org/ont/mmi/20080000/thisTopic">
-    <!-- RDF document type descriptions -->
-    <rdf:type rdf:resource="http://omv.ontoware.org/2005/05/ontology#OntologyDocument"/>
-    <rdf:type rdf:resource="http://www.w3.org/2000/01/rdf-schema#Resource"/>
-
-    <!-- DC core metadata (may duplicate OMV or MMI metadata) -->
-    <!-- title is same as omv:docName -->
-    <dc:title></dc:title>
-    <!-- creator is same as comma-separated list of omv:hasCreator fields -->
-    <dc:creator></dc:creator>
-    <!-- subject is same as omv:hasDomain -->
-    <dc:subject></dc:subject>
-    <!-- description is same as omv:description -->
-    <dc:description></dc:description>
-    <!-- publisher is same as omv:? -->
-    <dc:publisher></dc:publisher>
-    <!-- contributor is same as omv:hasContributor -->
-    <dc:contributor></dc:contributor> 
-    <!-- date is same as omv:creationDate -->
-    <dc:date></dc:date>
-    <!-- type is only in Dublin Core (best if from controlled vocabulary) -->
-    <dc:type>data</dc:type>
-    <dc:type>vocabulary</dc:type>
-    <dc:type>ontology</dc:type>
-    <!-- format in Dublin Core should be a mime type -->
-    <dc:format>text/xml+rdf</dc:format>
-    <!-- identifier is same as omv:uri -->
-    <dc:identifer></dc:identifer>
-    <!-- source is same as omvmmi:origVocUri -->
-    <dc:source></dc:source>
-    
-    <!-- OMV core metadata -->
-    
-    <omv:uri></omv:uri> <!-- OM.1 -->
-    <omv:name></omv:name> <!-- OM.22 -->
-    <omv:description></omv:description> <!-- OM.9 -->
-    <omv:acronym></omv:acronym> <!-- OM.4 ; is really short name, not acronym -->
-    <omv:version></omv:version> <!-- OM.2  -->
-    <omv:keywords></omv:keywords> <!-- OM.12 -->
-    <omv:hasCreator></omv:hasCreator> <!-- OSI.5 -->
-    <omv:creationDate></omv:creationDate> <!-- OM.3 ; creation date of this version -->
-    <omv:hasDomain></omv:hasDomain> <!-- OM.23 -->
-    
-    <omv:resourceLocator></omv:resourceLocator> <!-- OM.25 ; same as uri + '.owl' -->
-    <omv:documentation></omv:documentation> <!-- OM.15 -->
-    <omv:naturalLanguage></omv:naturalLanguage> <!-- OM.17 -->
-    <omv:hasContributor></omv:hasContributor> <!-- OM.21 -->
-    <omv:hasPriorVersion></omv:hasPriorVersion> <!-- OM.19 -->
-        
-    <!-- MMI metadata extensions -->
-    
-    <omvmmi:shortNameUri></omvmmi:shortNameUri> <!-- OM.5 ; source of omv:acronym -->
-  
-    <omvmmi:contact></omvmmi:contact> <!-- UL.1 -->
-    <omvmmi:contactRole></omvmmi:contactRole> <!-- UL.2 -->
-    <omvmmi:accessStatus></omvmmi:accessStatus> <!-- UL.5 -->
-    <omvmmi:accessStatusDate></omvmmi:accessStatusDate> <!-- UL.8 -->
-    <omvmmi:licenseCode></omvmmi:licenseCode> <!-- UL.9 ; until omv:hasLicense -->
-    
-    <omvmmi:licenseReference></omvmmi:licenseReference> <!-- UL.10 -->
-    <omvmmi:licenseAsOfDate></omvmmi:licenseAsOfDate> <!-- UL.11 -->
-    <omvmmi:temporaryMmiRole></omvmmi:temporaryMmiRole> <!-- UL.12 -->
-    <omvmmi:agreedMmiRole></omvmmi:agreedMmiRole> <!-- UL.13 -->
-    <omvmmi:creditRequired></omvmmi:creditRequired> <!-- UL.17 -->
-    <omvmmi:creditConditions></omvmmi:creditConditions> <!-- UL.18 -->
-    <omvmmi:creditCitation></omvmmi:creditCitation> <!-- UL.19 -->
-
-    <omvmmi:origVocUri></omvmmi:origVocUri> <!-- OSI.1 -->
-    <omvmmi:origVocManager></omvmmi:origVocManager> <!-- OSI.2 -->
-    <omvmmi:origVocDocumentationUri></omvmmi:origVocDocumentationUri> <!-- OSI.7 -->
-    <omvmmi:origVocShortName></omvmmi:origVocShortName> <!-- OSI.9.1 -->
-    <omvmmi:origVocDescriptiveName></omvmmi:origVocDescriptiveName> <!-- OSI.9.2 -->
-    <omvmmi:origVocVersionId></omvmmi:origVocVersionId> <!-- OSI.9.3 -->
-    <omvmmi:origVocKeywords></omvmmi:origVocKeywords> <!-- OSI.9.4 -->
-    <omvmmi:origVocSyntaxFormat></omvmmi:origVocSyntaxFormat> <!-- OSI.9.5 -->
-
-    <omvmmi:origMaintainerCode></omvmmi:origMaintainerCode> <!-- OSM.1 -->
-    
-  </rdf:Description>
-</rdf:RDF>
