@@ -1,5 +1,0 @@
-/**
- * Defines the metadata vocabularies.
- */
-package org.mmisw.ont.vocabulary;
-
