@@ -14,6 +14,12 @@ ChangeLog
 	  
 	- Fixed the ``,,'' issue in voc2rdf: issue #87	
 	
+	-  Code clean-up:
+		- Moved MdHelper from org.mmisw.ont.util/ to org.mmisw.ontmd.gwt.server/
+		- New class org.mmisw.ontmd.gwt.server/MdUtil with utilities for MdHelper.
+		- Removed org.mmisw.ont.{Omv,OmvMmi} from this project; now, the ont generated
+		  library org.mmisw.ont.vocabulary.jar is used instead.
+	
 2009-03-13
 	- Fixed http://code.google.com/p/mmisw/issues/detail?id=98:
 	                "new version allows the shortName and authority to be changed"
